# lora-finetune-studio

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/components/: dataset_tab.py  inference_tab.py  models_tab.py  training_tab.py
docker/: Dockerfile  docker-compose.yml
notebooks/: midjourney_finetuning.ipynb  quickstart.ipynb
scripts/: export_model.py  generate.py  train.py
src/lorakit/: __init__.py  config.py
src/lorakit/data/: __init__.py  dataset.py  preprocessor.py
src/lorakit/inference/: __init__.py  generator.py
src/lorakit/training/: __init__.py  callbacks.py  trainer.py
src/lorakit/utils/: __init__.py  logging.py  metrics.py
tests/: test_config.py  test_dataset.py  test_preprocessing.py
