[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorakit"
version = "1.0.0"
description = "A full-stack LoRA fine-tuning studio for large language models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Punya Modi", email = "modipunya@gmail.com"},
]
keywords = ["llm", "lora", "fine-tuning", "mistral", "transformers", "peft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "trl>=0.7.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "gradio>=4.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "huggingface_hub>=0.17.0",
    "evaluate>=0.4.0",
    "rouge_score>=0.1.2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
lora-train = "scripts.train:main"
lora-generate = "scripts.generate:main"
lora-studio = "app.main:main"

[project.urls]
Homepage = "https://github.com/punyamodi/lora-finetune-studio"
Repository = "https://github.com/punyamodi/lora-finetune-studio"
"Bug Tracker" = "https://github.com/punyamodi/lora-finetune-studio/issues"
"Hugging Face Model" = "https://huggingface.co/PunyaModi/mistral-7b-finetuned-Midjourney-prompt-v2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"
